fix hidden toolbar cover the page
[bugfix] hidden toolbar cover the page

--- a/client/app/components/toolbar/components/Toolbar.pcss
+++ b/client/app/components/toolbar/components/Toolbar.pcss
@@ -3,15 +3,19 @@
 
 .toolbar {
   position: fixed;
-  z-index: 9000;
-  width: 100%;
   bottom: 0;
+  width: 100%;
+  height: 0;
+  z-index: 9000;
 
   &--active &__wrapper {
     transform: translateY(0);
   }
 
   &__wrapper {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
     display: flex;
     flex-direction: column-reverse;
     transition: transform 0.25s ease-in-out;
